--- a/ChatGPT_and_Historical_Newspapers_v2.ipynb
+++ b/ChatGPT_and_Historical_Newspapers_v2.ipynb
@@ -109,7 +109,7 @@
     {
       "cell_type": "code",
       "source": [
-        "openai.api_key = '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'\n",
+        "openai.api_key = '<enter your API key here>'\n",
         "wrapper = textwrap.TextWrapper(width=150)"
       ],
       "metadata": {
